fix(merlin-www-buttons): correct text align brides button

--- a/packages/merlin-www-buttons/sass/brides/_mixins.scss
+++ b/packages/merlin-www-buttons/sass/brides/_mixins.scss
@@ -48,6 +48,7 @@
     border-radius: 30px;
     letter-spacing: 0;
     padding: 18px 38px;
+    text-align: center;
 }
 
 @mixin button-single-three-light() {
